kubernetes/deploy/home/media/navidrome/clusters/bastion/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  labels:
    app.kubernetes.io/name: navidrome
spec:
  selector:
    app.kubernetes.io/name: navidrome
  ports:
    - port: 4533
      targetPort: 4533
      name: http
  type: ClusterIP
