kubernetes/deploy/home/media/navidrome/clusters/bastion/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - navidrome
  rules:
    - host: navidrome
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  number: 4533
